fix the asset files path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pomodoro Timer</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <main class="app">
@@ -54,12 +54,12 @@
     </main>
     <div class="hidden">
       <audio
-        src="/assets/sound/get_back_to_work.mp3"
+        src="assets/sound/get_back_to_work.mp3"
         data-sound="pomodoro"
       ></audio>
-      <audio src="/assets/sound/alarm.mp3" data-sound="shortBreak"></audio>
-      <audio src="/assets/sound/alarm.mp3" data-sound="longBreak"></audio>
+      <audio src="assets/sound/alarm.mp3" data-sound="shortBreak"></audio>
+      <audio src="assets/sound/alarm.mp3" data-sound="longBreak"></audio>
     </div>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
